fix: scrollbars should now reappear

--- a/src/styles/tink-gis-angular.scss
+++ b/src/styles/tink-gis-angular.scss
@@ -353,6 +353,7 @@ button.btn.active {
 
 .flex-grow-1 {
   flex-grow: 1;
+  min-height: 0;
 }
 
 .overflow-wrapper {
